refactor(prompt): migrate to @inquirer/prompts from readline
BREAKING CHANGE: Replace node:readline with @inquirer/prompts for improved UX

- Replace all readline interfaces with @inquirer components
- Update prompt functions to use modern select/input/confirm
- Enhance template choice UI with better formatting
- Simplify AI suggestion display with new prompt system
- Remove manual keyboard handling in favor of inquirer
- Update related controller implementations

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -37,7 +37,7 @@
       "skipFiles": ["<node_internals>/**"],
       "cwd": "${workspaceFolder}/packages/gitguard",
       "program": "${workspaceFolder}/packages/gitguard/src/cli/gitguard.ts",
-      "args": ["branch", "edit", "--ai"],
+      "args": ["commit",  "--ai", "--debug"],
       "runtimeArgs": [
         "--loader",
         "ts-node/esm",
