--- a/packages/gitguard/package.json
+++ b/packages/gitguard/package.json
@@ -28,57 +28,57 @@
     "build:clean": "yarn clean && yarn build",
     "build:types": "tsc --project tsconfig.types.json",
     "typecheck": "tsc -p tsconfig.test.json --noEmit && tsc -p tsconfig.json --noEmit",
-    "test": "NODE_OPTIONS='--loader ts-node/esm' jest --config jest.config.cjs --selectProjects unit",
-    "test:unit": "NODE_OPTIONS='--loader ts-node/esm' jest --config jest.config.cjs --selectProjects unit",
-    "test:unit:watch": "NODE_OPTIONS='--loader ts-node/esm' jest --config jest.config.cjs --selectProjects unit --watch",
-    "test:integration": "NODE_OPTIONS='--experimental-vm-modules --no-warnings' TS_NODE_PROJECT=tsconfig.test.json jest --config jest.config.cjs --selectProjects integration",
-    "test:integration:watch": "NODE_OPTIONS='--loader ts-node/esm' jest --config jest.config.cjs --selectProjects integration --watch",
-    "test:all": "NODE_OPTIONS='--loader ts-node/esm' jest --config jest.config.cjs --selectProjects unit integration",
-    "test:e2e": "NODE_OPTIONS='--loader ts-node/esm' ts-node --esm ./e2e/index.ts --interactive",
-    "test:e2e:init:basic": "NODE_OPTIONS='--loader ts-node/esm' ts-node --esm ./e2e/index.ts --tests=init --scenario=init-basic",
-    "test:e2e:init:global": "NODE_OPTIONS='--loader ts-node/esm' ts-node --esm ./e2e/index.ts --tests=init --scenario=init-global",
-    "test:e2e:init:monorepo": "NODE_OPTIONS='--loader ts-node/esm' ts-node --esm ./e2e/index.ts --tests=init --scenario=init-monorepo",
-    "test:e2e:template:init": "NODE_OPTIONS='--loader ts-node/esm' ts-node --esm ./e2e/index.ts --tests=template --scenario=template-init-basic",
-    "test:e2e:template:validate": "NODE_OPTIONS='--loader ts-node/esm' ts-node --esm ./e2e/index.ts --tests=template --scenario=template-validate-valid",
-    "test:e2e:template:invalid": "NODE_OPTIONS='--loader ts-node/esm' ts-node --esm ./e2e/index.ts --tests=template --scenario=template-validate-invalid",
-    "test:e2e:template:list": "NODE_OPTIONS='--loader ts-node/esm' ts-node --esm ./e2e/index.ts --tests=template --scenario=template-list",
-    "test:e2e:template:custom": "NODE_OPTIONS='--loader ts-node/esm' ts-node --esm ./e2e/index.ts --tests=template --scenario=template-custom-path",
-    "test:e2e:status:basic": "NODE_OPTIONS='--loader ts-node/esm' ts-node --esm ./e2e/index.ts --tests=status --scenario=status-basic",
-    "test:e2e:status:global": "NODE_OPTIONS='--loader ts-node/esm' ts-node --esm ./e2e/index.ts --tests=status --scenario=status-global",
-    "test:e2e:status:local": "NODE_OPTIONS='--loader ts-node/esm' ts-node --esm ./e2e/index.ts --tests=status --scenario=status-local",
-    "test:e2e:status:ai": "NODE_OPTIONS='--loader ts-node/esm' ts-node --esm ./e2e/index.ts --tests=status --scenario=status-with-ai",
-    "test:e2e:status:show": "NODE_OPTIONS='--loader ts-node/esm' ts-node --esm ./e2e/index.ts --tests=status --scenario=status-show-command",
-    "test:e2e:commit:basic": "NODE_OPTIONS='--loader ts-node/esm' ts-node --esm ./e2e/index.ts --tests=commit-message --scenario=basic-formatting",
-    "test:e2e:commit:monorepo": "NODE_OPTIONS='--loader ts-node/esm' ts-node --esm ./e2e/index.ts --tests=commit-message --scenario=monorepo-detection",
-    "test:e2e:commit:multi": "NODE_OPTIONS='--loader ts-node/esm' ts-node --esm ./e2e/index.ts --tests=commit-message --scenario=multi-package",
-    "test:e2e:security:secrets": "NODE_OPTIONS='--loader ts-node/esm' ts-node --esm ./e2e/index.ts --tests=security --scenario=secrets-detection",
-    "test:e2e:security:tokens": "NODE_OPTIONS='--loader ts-node/esm' ts-node --esm ./e2e/index.ts --tests=security --scenario=token-detection",
-    "test:e2e:security:branch": "NODE_OPTIONS='--loader ts-node/esm' ts-node --esm ./e2e/index.ts --tests=security --scenario=branch-security",
-    "test:e2e:ai:basic": "NODE_OPTIONS='--loader ts-node/esm' ts-node --esm ./e2e/index.ts --tests=ai-suggestions --scenario=commit-ai-basic",
-    "test:e2e:ai:large": "NODE_OPTIONS='--loader ts-node/esm' ts-node --esm ./e2e/index.ts --tests=ai-suggestions --scenario=commit-ai-large",
-    "test:e2e:ai:complex": "NODE_OPTIONS='--loader ts-node/esm' ts-node --esm ./e2e/index.ts --tests=ai-suggestions --scenario=complex-commit-split",
-    "test:e2e:ai:branch": "NODE_OPTIONS='--loader ts-node/esm' ts-node --esm ./e2e/index.ts --tests=ai-suggestions --scenario=branch-ai-analyze",
-    "test:e2e:ai:pr": "NODE_OPTIONS='--loader ts-node/esm' ts-node --esm ./e2e/index.ts --tests=ai-suggestions --scenario=branch-ai-pr",
-    "test:e2e:ai:split": "NODE_OPTIONS='--loader ts-node/esm' ts-node --esm ./e2e/index.ts --tests=ai-suggestions --scenario=branch-ai-split",
-    "test:e2e:large:size": "NODE_OPTIONS='--loader ts-node/esm' ts-node --esm ./e2e/index.ts --tests=large-commits --scenario=size-detection",
-    "test:e2e:large:files": "NODE_OPTIONS='--loader ts-node/esm' ts-node --esm ./e2e/index.ts --tests=large-commits --scenario=many-files",
-    "test:e2e:branch:split": "NODE_OPTIONS='--loader ts-node/esm' ts-node --esm ./e2e/index.ts --tests=branch-features --scenario=branch-split-suggestion",
-    "test:e2e:branch:template": "NODE_OPTIONS='--loader ts-node/esm' ts-node --esm ./e2e/index.ts --tests=branch-features --scenario=pr-template-parsing",
-    "test:e2e:branch:complex": "NODE_OPTIONS='--loader ts-node/esm' ts-node --esm ./e2e/index.ts --tests=branch-features --scenario=complex-branch-split",
+    "test": "NODE_OPTIONS='--experimental-vm-modules --no-warnings' node --import './src/register.mjs' node_modules/jest/bin/jest.js --config jest.config.cjs --selectProjects unit",
+    "test:unit": "NODE_OPTIONS='--experimental-vm-modules --no-warnings' node --import './src/register.mjs' node_modules/jest/bin/jest.js --config jest.config.cjs --selectProjects unit",
+    "test:unit:watch": "NODE_OPTIONS='--experimental-vm-modules --no-warnings' node --import './src/register.mjs' node_modules/jest/bin/jest.js --config jest.config.cjs --selectProjects unit --watch",
+    "test:integration": "NODE_OPTIONS='--experimental-vm-modules --no-warnings' node --import './src/register.mjs' node_modules/jest/bin/jest.js --config jest.config.cjs --selectProjects integration",
+    "test:integration:watch": "NODE_OPTIONS='--experimental-vm-modules --no-warnings' node --import './src/register.mjs' node_modules/jest/bin/jest.js --config jest.config.cjs --selectProjects integration --watch",
+    "test:all": "NODE_OPTIONS='--experimental-vm-modules --no-warnings' node --import './src/register.mjs' node_modules/jest/bin/jest.js --config jest.config.cjs --selectProjects unit integration",
+    "test:e2e": "node --import './src/register.mjs' ./e2e/index.ts --interactive",
+    "test:e2e:init:basic": "node --import './src/register.mjs' ./e2e/index.ts --tests=init --scenario=init-basic",
+    "test:e2e:init:global": "node --import './src/register.mjs' ./e2e/index.ts --tests=init --scenario=init-global",
+    "test:e2e:init:monorepo": "node --import './src/register.mjs' ./e2e/index.ts --tests=init --scenario=init-monorepo",
+    "test:e2e:template:init": "node --import './src/register.mjs' ./e2e/index.ts --tests=template --scenario=template-init-basic",
+    "test:e2e:template:validate": "node --import './src/register.mjs' ./e2e/index.ts --tests=template --scenario=template-validate-valid",
+    "test:e2e:template:invalid": "node --import './src/register.mjs' ./e2e/index.ts --tests=template --scenario=template-validate-invalid",
+    "test:e2e:template:list": "node --import './src/register.mjs' ./e2e/index.ts --tests=template --scenario=template-list",
+    "test:e2e:template:custom": "node --import './src/register.mjs' ./e2e/index.ts --tests=template --scenario=template-custom-path",
+    "test:e2e:status:basic": "node --import './src/register.mjs' ./e2e/index.ts --tests=status --scenario=status-basic",
+    "test:e2e:status:global": "node --import './src/register.mjs' ./e2e/index.ts --tests=status --scenario=status-global",
+    "test:e2e:status:local": "node --import './src/register.mjs' ./e2e/index.ts --tests=status --scenario=status-local",
+    "test:e2e:status:ai": "node --import './src/register.mjs' ./e2e/index.ts --tests=status --scenario=status-with-ai",
+    "test:e2e:status:show": "node --import './src/register.mjs' ./e2e/index.ts --tests=status --scenario=status-show-command",
+    "test:e2e:commit:basic": "node --import './src/register.mjs' ./e2e/index.ts --tests=commit-message --scenario=basic-formatting",
+    "test:e2e:commit:monorepo": "node --import './src/register.mjs' ./e2e/index.ts --tests=commit-message --scenario=monorepo-detection",
+    "test:e2e:commit:multi": "node --import './src/register.mjs' ./e2e/index.ts --tests=commit-message --scenario=multi-package",
+    "test:e2e:security:secrets": "node --import './src/register.mjs' ./e2e/index.ts --tests=security --scenario=secrets-detection",
+    "test:e2e:security:tokens": "node --import './src/register.mjs' ./e2e/index.ts --tests=security --scenario=token-detection",
+    "test:e2e:security:branch": "node --import './src/register.mjs' ./e2e/index.ts --tests=security --scenario=branch-security",
+    "test:e2e:ai:basic": "node --import './src/register.mjs' ./e2e/index.ts --tests=ai-suggestions --scenario=commit-ai-basic",
+    "test:e2e:ai:large": "node --import './src/register.mjs' ./e2e/index.ts --tests=ai-suggestions --scenario=commit-ai-large",
+    "test:e2e:ai:complex": "node --import './src/register.mjs' ./e2e/index.ts --tests=ai-suggestions --scenario=complex-commit-split",
+    "test:e2e:ai:branch": "node --import './src/register.mjs' ./e2e/index.ts --tests=ai-suggestions --scenario=branch-ai-analyze",
+    "test:e2e:ai:pr": "node --import './src/register.mjs' ./e2e/index.ts --tests=ai-suggestions --scenario=branch-ai-pr",
+    "test:e2e:ai:split": "node --import './src/register.mjs' ./e2e/index.ts --tests=ai-suggestions --scenario=branch-ai-split",
+    "test:e2e:large:size": "node --import './src/register.mjs' ./e2e/index.ts --tests=large-commits --scenario=size-detection",
+    "test:e2e:large:files": "node --import './src/register.mjs' ./e2e/index.ts --tests=large-commits --scenario=many-files",
+    "test:e2e:branch:split": "node --import './src/register.mjs' ./e2e/index.ts --tests=branch-features --scenario=branch-split-suggestion",
+    "test:e2e:branch:template": "node --import './src/register.mjs' ./e2e/index.ts --tests=branch-features --scenario=pr-template-parsing",
+    "test:e2e:branch:complex": "node --import './src/register.mjs' ./e2e/index.ts --tests=branch-features --scenario=complex-branch-split",
     "lint": "eslint \"**/*.ts\"",
     "lint:fix": "eslint \"**/*.ts\" --fix",
     "format": "prettier --write \"src/**/*.ts\" \"bin/**/*.ts\"",
-    "postbuild": "NODE_OPTIONS='--loader ts-node/esm' ts-node --esm ./scripts/post-build.ts",
-    "dev": "NODE_OPTIONS='--loader ts-node/esm' ts-node --esm ./src/cli/gitguard.ts",
+    "postbuild": "node --import './src/register.mjs' ./scripts/post-build.ts",
+    "dev": "node --import './src/register.mjs' ./src/cli/gitguard.ts",
     "setup": "./setup-cli.sh",
     "unsetup": "./uninstall-cli.sh"
   },
   "dependencies": {
+    "@inquirer/prompts": "^7.1.0",
     "@octokit/rest": "^21.0.2",
     "chalk": "^4.1.2",
     "commander": "^11.1.0",
     "handlebars": "^4.7.8",
-    "inquirer": "^12.0.1",
     "js-tiktoken": "^1.0.15",
     "jsonc-parser": "^3.3.1",
     "minimatch": "^10.0.1",
