--- a/packages/gitguard/package.json
+++ b/packages/gitguard/package.json
@@ -74,6 +74,7 @@
     "unsetup": "./uninstall-cli.sh"
   },
   "dependencies": {
+    "@anthropic-ai/sdk": "^0.32.1",
     "@inquirer/prompts": "^7.1.0",
     "@octokit/rest": "^21.0.2",
     "chalk": "^4.1.2",
