feat(ai): add e2e test suite for AI providers
- Add test scenarios for Azure, OpenAI, Anthropic and Custom AI providers
- Configure test runner and type definitions
- Add npm scripts for individual provider testing

--- a/packages/gitguard/package.json
+++ b/packages/gitguard/package.json
@@ -65,6 +65,11 @@
     "test:e2e:branch:split": "node --import './src/register.mjs' ./e2e/index.ts --tests=branch-features --scenario=branch-split-suggestion",
     "test:e2e:branch:template": "node --import './src/register.mjs' ./e2e/index.ts --tests=branch-features --scenario=pr-template-parsing",
     "test:e2e:branch:complex": "node --import './src/register.mjs' ./e2e/index.ts --tests=branch-features --scenario=complex-branch-split",
+    "test:e2e:ai:azure": "node --import './src/register.mjs' ./e2e/index.ts --tests=ai-providers --scenario=azure-provider-config",
+    "test:e2e:ai:openai": "node --import './src/register.mjs' ./e2e/index.ts --tests=ai-providers --scenario=openai-provider-config",
+    "test:e2e:ai:anthropic": "node --import './src/register.mjs' ./e2e/index.ts --tests=ai-providers --scenario=anthropic-provider-config",
+    "test:e2e:ai:custom": "node --import './src/register.mjs' ./e2e/index.ts --tests=ai-providers --scenario=custom-provider-config",
+    "test:e2e:ai:providers": "node --import './src/register.mjs' ./e2e/index.ts --tests=ai-providers",
     "lint": "eslint \"**/*.ts\"",
     "lint:fix": "eslint \"**/*.ts\" --fix",
     "format": "prettier --write \"src/**/*.ts\" \"bin/**/*.ts\"",
