refactor(test): cleanup e2e test suite and improve split template
- Remove deprecated e2e test scenarios:
  - ai-suggestions.test.ts
  - template.test.ts
  - security.test.ts
  - status.test.ts and others
- Update commit split template to include proper reset steps
- Consolidate test scenarios for better maintainability

--- a/packages/gitguard/src/templates/default-commit-split.human.yml
+++ b/packages/gitguard/src/templates/default-commit-split.human.yml
@@ -45,6 +45,9 @@ template: |
   # Ensure we're in the git repository root
   cd $(git rev-parse --show-toplevel)
 
+  # Reset the current commit to unstage changes
+  git reset HEAD^
+
   # Commit 1: feat(scope): descriptive title
   git add [specific files]
   git commit -m "feat(scope): descriptive title" -m "detailed description"
