--- a/packages/gitguard/package.json
+++ b/packages/gitguard/package.json
@@ -54,12 +54,12 @@
     "test:e2e:security:secrets": "node --import './src/register.mjs' ./e2e/index.ts --tests=security --scenario=secrets-detection",
     "test:e2e:security:tokens": "node --import './src/register.mjs' ./e2e/index.ts --tests=security --scenario=token-detection",
     "test:e2e:security:branch": "node --import './src/register.mjs' ./e2e/index.ts --tests=security --scenario=branch-security",
-    "test:e2e:ai:basic": "node --import './src/register.mjs' ./e2e/index.ts --tests=ai-suggestions --scenario=commit-ai-basic",
-    "test:e2e:ai:large": "node --import './src/register.mjs' ./e2e/index.ts --tests=ai-suggestions --scenario=commit-ai-large",
-    "test:e2e:ai:complex": "node --import './src/register.mjs' ./e2e/index.ts --tests=ai-suggestions --scenario=complex-commit-split",
-    "test:e2e:ai:branch": "node --import './src/register.mjs' ./e2e/index.ts --tests=ai-suggestions --scenario=branch-ai-analyze",
-    "test:e2e:ai:pr": "node --import './src/register.mjs' ./e2e/index.ts --tests=ai-suggestions --scenario=branch-ai-pr",
-    "test:e2e:ai:split": "node --import './src/register.mjs' ./e2e/index.ts --tests=ai-suggestions --scenario=branch-ai-split",
+    "test:e2e:ai:commit:basic": "node --import './src/register.mjs' ./e2e/index.ts --tests=ai-suggestions --scenario=commit-ai-basic",
+    "test:e2e:ai:commit:large": "node --import './src/register.mjs' ./e2e/index.ts --tests=ai-suggestions --scenario=commit-ai-large",
+    "test:e2e:ai:commit:complex": "node --import './src/register.mjs' ./e2e/index.ts --tests=ai-suggestions --scenario=complex-commit-split",
+    "test:e2e:ai:pr:split": "node --import './src/register.mjs' ./e2e/index.ts --tests=ai-suggestions --scenario=branch-ai-split",
+    "test:e2e:ai:branch:analyze": "node --import './src/register.mjs' ./e2e/index.ts --tests=ai-suggestions --scenario=branch-ai-analyze",
+    "test:e2e:ai:branch:pr": "node --import './src/register.mjs' ./e2e/index.ts --tests=ai-suggestions --scenario=branch-ai-pr",
     "test:e2e:large:size": "node --import './src/register.mjs' ./e2e/index.ts --tests=large-commits --scenario=size-detection",
     "test:e2e:large:files": "node --import './src/register.mjs' ./e2e/index.ts --tests=large-commits --scenario=many-files",
     "test:e2e:branch:split": "node --import './src/register.mjs' ./e2e/index.ts --tests=branch-features --scenario=branch-split-suggestion",
@@ -89,7 +89,8 @@
     "jsonc-parser": "^3.3.1",
     "minimatch": "^10.0.1",
     "openai": "^4.70.2",
-    "yaml": "^2.6.0"
+    "yaml": "^2.6.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@jest/types": "^29.6.3",
