--- a/packages/gitguard/src/templates/default-commit.api.yml
+++ b/packages/gitguard/src/templates/default-commit.api.yml
@@ -6,6 +6,18 @@ active: true
 ai:
   provider: openai
   model: gpt-4
+systemPrompt: |
+  You are an expert git commit message assistant. Generate 3 distinct conventional commit format suggestions in JSON format.
+  Each suggestion must include:
+  - title: the description without type/scope
+  - message: ({{#if includeDetails}}required{{else}}optional{{/if}}) for this commit
+  - type: conventional commit type
+
+  {{#if includeDetails}}
+  Include detailed high level summary of the changes in the details field
+  {{else}}
+  Keep suggestions concise with title only.
+  {{/if}}
 template: |
   Analyze these git changes and suggest commit messages following conventional commits format.
 
