--- a/packages/gitguard/tsconfig.json
+++ b/packages/gitguard/tsconfig.json
@@ -25,15 +25,14 @@
     ],
     "composite": true,
     "paths": {
-      "@siteed/gitguard": [
-        "./src/index.ts"
-      ]
+      "@siteed/gitguard/*": ["src/*"]
     },
     "allowSyntheticDefaultImports": true,
     "sourceMap": true,
     "inlineSourceMap": false,
     "inlineSources": true,
     "declarationMap": true,
+    "baseUrl": "."
   },
   "ts-node": {
     "esm": true,
