--- a/packages/gitguard/src/templates/default-pr-split.api.yml
+++ b/packages/gitguard/src/templates/default-pr-split.api.yml
@@ -8,7 +8,7 @@ ai:
   provider: openai
   model: gpt-4
 template: |
-  Analyze these changes and suggest how to split them into multiple PRs:
+  Analyze these changes and suggest how to split them into multiple PRs. Focus on main feature groups and aim for 2-3 PRs maximum. If changes are cohesive and logical together, suggest keeping them as a single PR.
 
   Base Branch: {{baseBranch}}
 
@@ -31,7 +31,7 @@ template: |
 
   Please provide split suggestions in this JSON format:
   {
-    "reason": "explanation why the changes should be split",
+    "reason": "explanation why the changes should be split (or why they should stay together)",
     "suggestedPRs": [
       {
         "title": "descriptive PR title",
@@ -41,14 +41,22 @@ template: |
         "baseBranch": "branch to base PR on",
         "dependencies": ["list of PR numbers this depends on"]
       }
-    ],
+    ] | [], // Empty array if no split needed
     "commands": ["git commands to execute the split"]
   }
 
   Guidelines:
-  1. Split by logical units of work
-  2. Keep related changes together
-  3. Consider package boundaries
-  4. Maintain dependency order
+  1. Focus on main feature groups - aim for 2-3 PRs maximum
+  2. Keep related changes together (features + tests + types + styles)
+  3. Only split when changes serve different business purposes
+  4. Consider deployment dependencies
   5. Follow conventional commit format for titles
   6. Include clear git commands for implementation
+
+  Keep as single PR when:
+  1. Changes implement a single feature or fix
+  2. Changes are tightly coupled or interdependent
+  3. Small to medium-sized changes across related areas
+  4. Infrastructure changes that need to be deployed together
+
+  Remember: Return empty suggestedPRs array if changes are cohesive and shouldn't be split!
