feat(ai): integrate multiple AI providers and enhance commit management (#34)
* refactor(e2e): rename test files to follow .e2e.test.ts pattern

- Standardizes e2e test file naming convention
- Improves test file organization and discoverability
- No functional changes, only file renames

* feat(types): add base AI provider interfaces and types

- Adds shared interfaces for AI providers
- Introduces provider-specific config types
- Prepares type system for multiple AI integrations

* feat(ai): add Anthropic AI provider integration

- Implements Anthropic Claude API integration
- Adds support for Claude 3 model family
- Includes token usage and cost calculations
- Adds @anthropic-ai/sdk dependency

* feat(ai): add custom AI provider support

- Implements generic AI provider interface
- Supports custom API endpoints and models
- Enables integration with self-hosted AI services

* feat(ai): update AI factory and config for new providers

- Adds factory support for Anthropic and custom providers
- Updates configuration handling for new providers
- Modifies init and status commands to support new options
- Refactors OpenAI service to use shared types

* feat(ai): add e2e test suite for AI providers

- Add test scenarios for Azure, OpenAI, Anthropic and Custom AI providers
- Configure test runner and type definitions
- Add npm scripts for individual provider testing

* refactor(customai): enhance logging and error handling

- Add detailed request and response logging
- Improve error context for debugging
- Use default temperature constant
- Add request configuration to error logs

* refactor(test): cleanup e2e test suite and improve split template

- Remove deprecated e2e test scenarios:
  - ai-suggestions.test.ts
  - template.test.ts
  - security.test.ts
  - status.test.ts and others
- Update commit split template to include proper reset steps
- Consolidate test scenarios for better maintainability

* feat(ai): imple

--- a/packages/gitguard/package.json
+++ b/packages/gitguard/package.json
@@ -54,17 +54,22 @@
     "test:e2e:security:secrets": "node --import './src/register.mjs' ./e2e/index.ts --tests=security --scenario=secrets-detection",
     "test:e2e:security:tokens": "node --import './src/register.mjs' ./e2e/index.ts --tests=security --scenario=token-detection",
     "test:e2e:security:branch": "node --import './src/register.mjs' ./e2e/index.ts --tests=security --scenario=branch-security",
-    "test:e2e:ai:basic": "node --import './src/register.mjs' ./e2e/index.ts --tests=ai-suggestions --scenario=commit-ai-basic",
-    "test:e2e:ai:large": "node --import './src/register.mjs' ./e2e/index.ts --tests=ai-suggestions --scenario=commit-ai-large",
-    "test:e2e:ai:complex": "node --import './src/register.mjs' ./e2e/index.ts --tests=ai-suggestions --scenario=complex-commit-split",
-    "test:e2e:ai:branch": "node --import './src/register.mjs' ./e2e/index.ts --tests=ai-suggestions --scenario=branch-ai-analyze",
-    "test:e2e:ai:pr": "node --import './src/register.mjs' ./e2e/index.ts --tests=ai-suggestions --scenario=branch-ai-pr",
-    "test:e2e:ai:split": "node --import './src/register.mjs' ./e2e/index.ts --tests=ai-suggestions --scenario=branch-ai-split",
+    "test:e2e:ai:commit:basic": "node --import './src/register.mjs' ./e2e/index.ts --tests=ai-suggestions --scenario=commit-ai-basic",
+    "test:e2e:ai:commit:large": "node --import './src/register.mjs' ./e2e/index.ts --tests=ai-suggestions --scenario=commit-ai-large",
+    "test:e2e:ai:commit:complex": "node --import './src/register.mjs' ./e2e/index.ts --tests=ai-suggestions --scenario=complex-commit-split",
+    "test:e2e:ai:pr:split": "node --import './src/register.mjs' ./e2e/index.ts --tests=ai-suggestions --scenario=branch-ai-split",
+    "test:e2e:ai:branch:analyze": "node --import './src/register.mjs' ./e2e/index.ts --tests=ai-suggestions --scenario=branch-ai-analyze",
+    "test:e2e:ai:branch:pr": "node --import './src/register.mjs' ./e2e/index.ts --tests=ai-suggestions --scenario=branch-ai-pr",
     "test:e2e:large:size": "node --import './src/register.mjs' ./e2e/index.ts --tests=large-commits --scenario=size-detection",
     "test:e2e:large:files": "node --import './src/register.mjs' ./e2e/index.ts --tests=large-commits --scenario=many-files",
     "test:e2e:branch:split": "node --import './src/register.mjs' ./e2e/index.ts --tests=branch-features --scenario=branch-split-suggestion",
     "test:e2e:branch:template": "node --import './src/register.mjs' ./e2e/index.ts --tests=branch-features --scenario=pr-template-parsing",
     "test:e2e:branch:complex": "node --import './src/register.mjs' ./e2e/index.ts --tests=branch-features --scenario=complex-branch-split",
+    "test:e2e:ai:azure": "node --import './src/register.mjs' ./e2e/index.ts --tests=ai-providers --scenario=azure-provider-config",
+    "test:e2e:ai:openai": "node --import './src/register.mjs' ./e2e/index.ts --tests=ai-providers --scenario=openai-provider-config",
+    "test:e2e:ai:anthropic": "node --import './src/register.mjs' ./e2e/index.ts --tests=ai-providers --scenario=anthropic-provider-config",
+    "test:e2e:ai:custom": "node --import './src/register.mjs' ./e2e/index.ts --tests=ai-providers --scenario=custom-provider-config",
+    "test:e2e:ai:providers": "node --import './src/register.mjs' ./e2e/index.ts --tests=ai-providers",
     "lint": "eslint \"**/*.ts\"",
     "lint:fix": "eslint \"**/*.ts\" --fix",
     "format": "prettier --write \"src/**/*.ts\" \"bin/**/*.ts\"",
@@ -74,6 +79,7 @@
     "unsetup": "./uninstall-cli.sh"
   },
   "dependencies": {
+    "@anthropic-ai/sdk": "^0.32.1",
     "@inquirer/prompts": "^7.1.0",
     "@octokit/rest": "^21.0.2",
     "chalk": "^4.1.2",
@@ -83,7 +89,8 @@
     "jsonc-parser": "^3.3.1",
     "minimatch": "^10.0.1",
     "openai": "^4.70.2",
-    "yaml": "^2.6.0"
+    "yaml": "^2.6.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@jest/types": "^29.6.3",
